Import of AMIRI/Checkout-CyberSource-SOAP-0.05 from CPAN.
gitpan-cpan-distribution: Checkout-CyberSource-SOAP
gitpan-cpan-version:      0.05
gitpan-cpan-path:         AMIRI/Checkout-CyberSource-SOAP-0.05.tar.gz
gitpan-cpan-author:       AMIRI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,27 @@
 ---
 abstract: "A Modern Perl interface to CyberSource's SOAP API."
 author:
-  - 'Amiri Barksdale <amiri@metalabel.com>'
-build_requires: {}
+  - 'Amiri Barksdale <amiri@arisdottle.net>'
+build_requires:
+  Data::Dumper: 0
+  Test::Moose: 0
+  Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
-generated_by: 'Dist::Zilla version 2.101040'
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.200012, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Checkout-CyberSource-SOAP
-recommends: {}
 requires:
   Business::CreditCard: 0
-  Crypt::SSLeay: 0
   Moose: 0
   SOAP::Lite: 0
   Time::HiRes: 0
   namespace::autoclean: 0
+  perl: 5.008_001
 resources:
-  repository: http://github.com/amiri/Checkout--CyberSource--SOAP
-version: 0.04
+  repository: git://github.com/amiri/Checkout--CyberSource--SOAP.git
+version: 0.05
