--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,9 @@ author:
   - 'Amiri Barksdale <amiri@arisdottle.net>'
 build_requires:
   Data::Dumper: 0
+  English: 0
+  File::Find: 0
+  File::Temp: 0
   Test::Moose: 0
   Test::More: 0
 configure_requires:
@@ -23,5 +26,6 @@ requires:
   namespace::autoclean: 0
   perl: 5.008_001
 resources:
+  bugtracker: https://github.com/amiri/Checkout--CyberSource--SOAP/issues
   repository: git://github.com/amiri/Checkout--CyberSource--SOAP.git
-version: 0.06
+version: 0.07
