--- a/dist.ini
+++ b/dist.ini
@@ -1,12 +1,13 @@
 name    = Checkout-CyberSource-SOAP 
-version = 0.06
+version = 0.07
 author  = Amiri Barksdale <amiri@arisdottle.net>
 license = Perl_5
 copyright_holder = Amiri Barksdale
 abstract = A Modern Perl interface to CyberSource's SOAP API.
 copyright_year = 2011
 
-[@Basic]
+[@Filter]
+	-bundle = @Basic
 [InstallGuide]
 [MetaJSON]
 
@@ -14,6 +15,12 @@ copyright_year = 2011
 repository.url    = git://github.com/amiri/Checkout--CyberSource--SOAP.git
 repository.web    = http://github.com/amiri/Checkout--CyberSource--SOAP
 repository.type   = git
+bugtracker.web    = https://github.com/amiri/Checkout--CyberSource--SOAP/issues
 
 [AutoPrereqs]
 [ReadmeFromPod]
+[OurPkgVersion]
+
+[NextRelease]
+[@TestingMania]
+	disable = EOLTests,NoTabsTests,SynopsisTests,PodCoverageTests,UnusedVarsTests,KwaliteeTests
